--- a/app/src/main/res/layout/activity_single_cinema.xml
+++ b/app/src/main/res/layout/activity_single_cinema.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".single_cinema_details.SingleCinema">
+    tools:context=".ui.single_cinema_details.SingleCinema">
 
 
     <LinearLayout
@@ -43,7 +43,8 @@
                     android:layout_height="500dp"
                     android:layout_gravity="center"
                     android:scaleType="matrix"
-                    android:src="@drawable/poster_placeholder"/>
+                    android:src="@drawable/ic_launcher_background"
+                    />
 
                 <LinearLayout
                     android:layout_width="match_parent"
